--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -234,15 +234,18 @@
 @media (min-width: 769px) {
 
   /* Hide scrollbar for Chrome, Safari and Opera */
-  body::-webkit-scrollbar {
-    display: none;
+  html::-webkit-scrollbar,
+  body::-webkit-scrollbar,
+  *::-webkit-scrollbar {
+    display: none !important;
+    width: 0 !important;
+    height: 0 !important;
   }
 
   /* Hide scrollbar for IE, Edge and Firefox */
+  html,
   body {
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
+    -ms-overflow-style: none !important;
+    scrollbar-width: none !important;
   }
 }
